fix: add themes/blank as a submodule, bring footer definition to my layouts

--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -48,9 +48,8 @@ Also performed tasks on the backend, which uses the Ruby on Rails framework, Mon
 </div>
 
 
-	<footer class="site-footer">
-	 <p>Copyright &copy; 2025 <a class="site-footer" href="http://localhost:1313/">Gustavo de Oliveira Ferreira</a>. All rights reserved. </p>
-</footer>
-
+    <footer class="site-footer" >
+      <a><p>Copyright &copy; 2025 Gustavo de Oliveira Ferreira. All rights reserved.</a>
+    </footer>
 </body>
 </html>
